# geospasi

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  dataset_request.yml  feature_request.yml  skripsi.yml
.github/workflows/: deploy-spasi-web.yml  deploy-web.yml  export-agregat.yml
app/: index.html
app/css/: style.css
app/js/: app.js  config.sample.js
app/sample-data/: area.geojson  titik.geojson
docs/: codex-open-source.md  demo-checklist.md  good-first-issues.md  working_paper_spasi.md
docs/adr/: ADR-001.md  ADR-002.md
examples/geoserang/: README.md  config.js
potensi_pajak_hotel/analysis/: README.md
potensi_pajak_hotel/data/: hotel_sintetis.csv
potensi_pajak_hotel/etl/: ingest_hotel.py
potensi_pajak_restoran/analysis/: README.md  deteksi_kesenjangan.model3  gap_style.qml
potensi_pajak_restoran/data/: desa_anyar.geojson  laporan_masalah.csv  restoran_anyar.csv  restoran_sintetis.csv
potensi_pajak_restoran/etl/: ingest_restoran.py
potensi_pajak_restoran/web/: dashboard.py  index.html  map.js  style.css
scripts/: etl_utils.py  generate_lensa_data.py  process_remaining.py  report_geojson_size.py  simplify_web.py
shared/: etl_utils.py
shared/data/: bps_kecamatan_serang.csv  bps_pariwisata_serang.csv  ckan_catalog.csv  pendapatan_pajak_serang.csv
shared/scripts/: export_agregat.py  fetch_osm.py  generate_atlas.py  generate_lensa_data.py  generate_synthetic_data.py  ingest_ckan.py  ingest_gistaru.py  (+2 more)
web/: index.html
(+46 files in other folders)
